# rewards

./: README.md  TASK_10_VALIDATION_REPORT.md  cdk.context.json  cdk.json  package-lock.json  package.json  test_integration.py  test_tier_and_expiration_validation.py
.kiro/steering/: architecture.md  coding-standards.md  security.md  testing.md
docs/: CONFIGURATION.md  DEPLOYMENT.md  OPERATIONS.md  RUNBOOK.md
lambda/: README.md  requirements.txt  setup.cfg
lambda/boto3-1.42.66.dist-info/: RECORD
lambda/botocore-1.42.66.dist-info/: RECORD
lambda/charset_normalizer-3.4.5.dist-info/: RECORD
lambda/common/: __init__.py  dynamodb.py  logger.py  models.py  star_calculator.py  validation.py
lambda/docker-7.1.0.dist-info/: RECORD
lambda/enrollment/: __init__.py  handler.py
lambda/expiration/: __init__.py  handler.py
lambda/hypothesis-6.151.9.dist-info/: RECORD
lambda/jsonpath_ng-1.8.0.dist-info/: RECORD
lambda/moto-5.1.22.dist-info/: RECORD
lambda/purchase/: __init__.py  handler.py
lambda/py_partiql_parser-0.6.3.dist-info/: RECORD
lambda/pydantic-1.10.26.dist-info/: RECORD
lambda/pygments-2.19.2.dist-info/: RECORD
lambda/pytest-9.0.2.dist-info/: RECORD
lambda/query/: __init__.py  handler.py
lambda/redemption/: __init__.py  handler.py
lambda/responses-0.26.0.dist-info/: RECORD
lambda/tier_evaluation/: __init__.py  handler.py
lib/: environment-config.ts  rewards-stack.ts
scripts/: deploy-dev.sh  deploy-prod.sh  deploy-staging.sh  deploy.sh  destroy.sh  test-flow.sh  test-manual.sh  utils.sh
test/: rewards.test.ts
tests/: conftest.py
(+15 files in other folders)
