[metadata]
name = rewards-program-lambda
version = 1.0.0
description = Lambda functions for rewards program backend

[options]
python_requires = >=3.11
packages = find:
install_requires =
    boto3>=1.34.0
    pydantic>=2.5.0

[options.packages.find]
exclude =
    tests*
    __pycache__

[tool:pytest]
testpaths = ../tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --strict-markers
    --tb=short

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    venv,
    .venv
ignore = E203, W503
